# ncad

./: .gitignore  CLAUDE.md  README.md  design.md  docs_hooks.py  mkdocs.yml  plan.md  pyproject.toml
.github/workflows/: deploy-docs.yml  test-deploy-docs.yml
docs/: design.md  design_ideas.md  documentation-design.md  documentation-structure.json  feature-ordering.md  foundational-risks.md  ncad-design-and-plan.html  plan.md
docs/research/: README.md  assembly-constraints-3d.md  blender-transferable-ideas.md  cam-toolpath-kernel.md  class-a-surfacing-feasibility.md  direct-modeling-envelope.md  direct-modeling-occt-ceiling.md  infinigen-transferable-ideas.md  kernel-choice-2026.md  library-capability-audit.md  occt-boolean-robustness.md  pcb-ecad-ownership.md  viewer-tessellation-lod.md
docs_site/: index.md
docs_site/assets/: mathjax.js
docs_site/learn/: index.md
docs_site/ncad/: index.md  showcase.md
docs_site/overrides/: main.html
docs_site/schema/: content-node.schema.json
examples/: 01_rect_flat.hocon  02_rect_gable.hocon  03_rect_hip.hocon  04_rect_shed.hocon  05_rounded_corners.hocon  06_L_shape.hocon  07_irregular_pentagon.hocon  08_two_storey_gable.hocon  09_three_storey_balconies.hocon  10_complex_composite.hocon  11_rounded_two_storey_balcony.hocon  README.md
examples/01-sketching/: guitar_pick.hocon  underconstrained_tab.hocon
examples/02-solid-features/: airfoil_wing.hocon  end_conditions.hocon  hvac_duct.hocon  lofted_transition.hocon  revolved_washer.hocon  routed_pipe.hocon
examples/03-dress-up/: engraved_nameplate.hocon  hex_bolt.hocon  shelf_bracket.hocon
examples/04-patterns-multibody/: materials_part.hocon  mirrored_bodies.hocon  mounting_bracket.hocon  multibody_algebra.hocon  transformed_blocks.hocon
examples/05-direct-modeling/: coaxial_bosses.hocon  defeatured_block.hocon  offset_shell.hocon
examples/06-assemblies/: caster.asm.hocon  caster.hocon  wheel_axle.asm.hocon
examples/07-motion/: cam_follower.asm.hocon  cam_follower.hocon  cam_follower.motion.hocon  clearance_probe.asm.hocon  clearance_probe.motion.hocon  four_bar.asm.hocon  four_bar.hocon  four_bar.motion.hocon  gear_pair.hocon  gear_pair.motion.hocon  geneva.asm.hocon  peaucellier.asm.hocon  peaucellier.hocon  peaucellier.motion.hocon  planetary.asm.hocon  planetary.hocon  planetary.motion.hocon  rack_pinion.motion.hocon  reciprocating_pump.hocon  reciprocating_pump.motion.hocon  scotch_yoke.hocon  walking_beam.asm.hocon  walking_beam.hocon  walking_beam.motion.hocon
examples/08-robotics/: crank_slider.physics.hocon  crank_slider_mjcf.physics.hocon  crank_slider_sdf.physics.hocon  desk_arm.asm.hocon  desk_arm.hocon  desk_arm.physics.hocon
examples/09-cam/: README.md  fdm_petg.slice.json
examples/10-fea/: bracket.analysis.hocon  bracket.hocon
examples/furniture/: chair.asm.hocon  chair.hocon  revolving_chair.asm.hocon  revolving_chair.hocon  revolving_chair.motion.hocon  revolving_chair.recline.motion.hocon  study_table.asm.hocon  study_table.hocon
examples/gate-0.1-first-shape/: README.md  block.hocon
examples/gate-0.2/: README.md  bracket.hocon  hex_boss.hocon
examples/gate-0.3/: capped_hole.hocon  selector_fillet.hocon
examples/gate-0.4/: README.md  param_bar.hocon  param_plate.hocon  param_standoff.hocon
examples/gate-0.5/: README.md  editable_bracket.hocon  two_body_clip.hocon
examples/gate-1.1/: README.md  constrained_lbracket.hocon  constrained_rect.hocon
examples/gate-1.2/: README.md  rounded_bar.hocon  slotted_tab.hocon
examples/gate-1.3/: README.md  constrained_bracket.hocon  tangent_bar.hocon
examples/gate-1.4/: README.md  projected_inset.hocon  projected_ring.hocon
examples/gate-1.4b/: README.md  circular_pattern.hocon  linear_pattern.hocon  mirrored_profile.hocon
examples/gate-1.4c/: README.md  filleted_plate.hocon  trimmed_mirror.hocon
examples/gate-1.4d/: README.md  offset_frame.hocon  rounded_offset.hocon
examples/gate-1.5/: README.md  underconstrained_tab.hocon
examples/gate-1.6/: README.md  guitar_pick.hocon  nameplate.hocon
examples/gate-1.6a/: README.md  elliptical_flange.hocon  luggage_tag.hocon
examples/gate-1.7/: README.md  rocker_arm.hocon
examples/gate-1.9/: README.md  finial.hocon
examples/gate-2.0/: README.md  step_block.hocon
examples/gate-2.1/: README.md  end_conditions.hocon
examples/gate-2.10/: README.md  control_knob.hocon  hex_bolt.hocon  shelf_bracket.hocon  threaded_stud.hocon
examples/gate-2.2/: README.md  revolved_washer.hocon
examples/gate-2.3/: README.md  coil_spring.hocon  hvac_duct.hocon  swept_pipe.hocon
examples/gate-2.3.5/: README.md  bezier_sweep.hocon  spline_profile.hocon
examples/gate-2.4/: README.md  lofted_cone.hocon  lofted_transition.hocon  ruled_loft.hocon
examples/gate-2.5/: README.md  curved_rib.hocon  t_rib.hocon
examples/gate-2.6/: README.md  angle_chamfer.hocon  two_distance_chamfer.hocon
examples/gate-2.7/: README.md  drafted_boss.hocon  shelled_box.hocon
examples/gate-2.8/: README.md  counterbore_plate.hocon  countersink_plate.hocon  tapped_boss.hocon
examples/gate-2.8b/: README.md  embossed_logo.hocon  engraved_nameplate.hocon
examples/gate-2.9/: README.md  mounting_bracket.hocon
examples/gate-3.0/: README.md  two_body_bracket.hocon
examples/gate-3.1/: README.md  transformed_blocks.hocon
examples/gate-3.2/: README.md  patterned_bodies.hocon
examples/gate-3.3/: README.md  mirrored_bodies.hocon
examples/gate-3.4/: README.md  multibody_algebra.hocon
examples/gate-3.5/: README.md  materials_part.hocon
examples/gate-3.6/: README.md  flanged_coupling.hocon
examples/gate-3.7/: README.md  bimetal_bushing.hocon  bolt_circle_flange.hocon  pin_heatsink.hocon
examples/gate-4.2/: defeatured_block.hocon  offset_shell.hocon
examples/gate-4.2b/: imported_edit.hocon
examples/gate-4.3a/: related_blocks.hocon
examples/gate-4.3b/: coaxial_bosses.hocon
materials/: seed.hocon
schema/: analysis_schema.hocon  assembly_schema.hocon  building_schema.hocon  materials_schema.hocon  part_schema.hocon
tests/: test_imports.py
(+1184 files in other folders)
