[project]
name = "ncad"
version = "0.0.1"
description = "A declarative, parametric and direct CAD/CAM/CAE/PCB engine driven by a text document."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "build123d",
    "jsonschema",
    "leaf-common",
    "numpy",
    "trimesh",
    "pyrender",
    "typer>=0.26.8",
]

[project.scripts]
# `ncad` = the project CLI (typer); `ncad view [dir]` launches the browser 3D viewer
# from anywhere in the project. `nc` is avoided (it is system netcat).
ncad = "ncad.cli.viewer_cli:main"
# `nv` = shorthand alias for the viewer (python -m ncad.viewer).
nv = "ncad.viewer.__main__:main"
# `ncad-build` = build a feature-tree document to glTF.
ncad-build = "ncad.build.__main__:main"

[project.optional-dependencies]
# CAD interchange — DXF/IFC floor plans (plan.md Phase 7 / 11)
interchange = [
    "ezdxf",
    "ifcopenshell",
]
# Multi-agent orchestration (plan.md Phase 9)
agents = [
    "neuro-san",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ncad"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# pycodestyle (E), pyflakes (F), isort (I), pyupgrade (UP), naming (N)
select = ["E", "F", "I", "UP", "N"]

[tool.ruff.lint.per-file-ignores]
# viewer_page.py is an embedded HTML/JS document; long markup lines are expected.
"src/ncad/viewer/viewer_page.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ncad"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: tests that import the geometry kernel (OCP); slow first import (~90s). Run with -m slow or deselect with -m 'not slow'.",
]
