[project]
name = "ncad"
version = "0.0.1"
description = "A data-driven CAD engine: declarative, parametric and direct, driven by a text document."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "build123d",
    "jsonschema",
    "leaf-common",
    "numpy",
    "trimesh",
    "pyrender",
    "imageio",
    "typer>=0.26.8",
    "lark>=1.3.1",
    "py-slvs>=1.0.6",
    "pyondsel>=0.0.3",
    "tornado>=6.5.6",
    "mujoco>=3.10.0",
]

# pyondsel (the OndselSolver multibody bindings for motion) resolves from PyPI by default (the base
# dependency `pyondsel>=0.0.3` above), so a fresh clone needs no side-by-side checkout. To develop
# against a local checkout instead, after `uv sync` run:  uv pip install -e ../pyondsel  -- a
# deliberate opt-in that shadows the PyPI wheel with the editable source; `uv sync` reverts to PyPI.

[project.scripts]
# `ncad` = the project CLI (typer): `ncad view [dir]` launches the browser 3D viewer,
# `ncad build <doc>` builds a document. Runs from anywhere in the project. `nc` is
# avoided (it is system netcat).
ncad = "ncad.cli.viewer_cli:main"
# `ncad-build` = build a feature-tree document to glTF (equivalent to `ncad build`).
ncad-build = "ncad.build.__main__:main"

[project.optional-dependencies]
# CAD interchange: DXF/IFC floor plans (future roadmap: interchange)
interchange = [
    "ezdxf",
    "ifcopenshell",
]
# Structural FEA (S7 CAE): gmsh meshes an exported STEP; meshio reads the CalculiX .frd
# results. The CalculiX solver (ccx) itself is a delegated external binary, never bundled.
fea = [
    "gmsh",
    "meshio",
]
# Multi-agent orchestration (future roadmap)
agents = [
    "neuro-san",
]

[dependency-groups]
dev = [
    "pyrefly>=1.1.1",
    "pytest",
    "ruff",
]
docs = [
    "mkdocs-material>=9.7.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ncad"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# pycodestyle (E), pyflakes (F), isort (I), pyupgrade (UP), naming (N)
select = ["E", "F", "I", "UP", "N"]

[tool.ruff.lint.isort]
known-first-party = ["ncad"]

# Static type checking (advisory, not a commit gate yet). Run: `uv run pyrefly check`.
# The geometry backend (build123d / OCP) ships incomplete stubs, so kernel handles are
# intentionally typed `Any` at that boundary; the rest of the code is fully hinted.
[tool.pyrefly]
project-includes = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: tests that import the geometry kernel (OCP); slow first import (~90s). Run with -m slow or deselect with -m 'not slow'.",
]
